EXTRA_DIST = instance.fig state.fig instance.ps state.ps \
	flexdos.htm flexfcb.htm flexmem.htm neumon54.htm \
	flexemu.htm flexfms.htm flexuser.htm flexerr.htm \
	flexfs.htm flexutil.htm

pkgdata_DATA = flexdos.htm flexfcb.htm flexmem.htm neumon54.htm \
	flexemu.htm flexfms.htm flexuser.htm flexerr.htm \
	flexfs.htm flexutil.htm

all:

