pkgdata_DATA = flexdos.htm flexfcb.htm flexmem.htm neumon54.htm \
	flexemu.htm flexfms.htm flexuser.htm flexerr.htm \
	flexfs.htm flexutil.htm e2hwdesc.htm mc6809.htm \
	6809diag.pdf 6809fadg.pdf asmb.pdf ba2bqs.pdf basic_um.pdf\
	basprec.pdf crasmb.pdf debug.pdf dynamite.pdf f77.pdf\
	flex2um.pdf flexapg.pdf linkload.pdf relasmb.pdf swflexum.pdf\
	tedit.pdf util_man.pdf 6x09_Instruction_Sets.pdf

extra_files = instance.fig state.fig instance.ps state.ps

EXTRA_DIST = ${pkgdata_DATA} ${extra_files}

SUBDIRS = images


