pkgdata_DATA = \
	6809diag.pdf \
	6809fadg.pdf \
	6x09_Instruction_Sets.pdf \
	asmb.pdf \
	ba2bqs.pdf \
	basic_um.pdf\
	basprec.pdf \
	crasmb.pdf \
	debug.pdf \
	dynamite.pdf \
	e2hwdesc.htm \
	f77.pdf\
	flex2um.pdf \
	flexapg.pdf \
	flexdos.htm \
	flexemu.css \
	flexemu.htm \
	flexerr.htm \
	flexfcb.htm \
	flexfms.htm \
	flexfs.htm \
	flexmem.htm \
	flexuser.htm \
	flexutil.htm \
	linkload.pdf \
	mc6809.htm \
	mon24.htm \
	neumon54.htm \
	relasmb.pdf \
	swflexum.pdf\
	tedit.pdf \
	util_man.pdf

extra_files = \
	instance.fig \
	instance.ps \
	state.fig \
	state.ps

EXTRA_DIST = ${pkgdata_DATA} ${extra_files}

SUBDIRS = images

