EXTRA_DIST = asneumon neumon54.asm neumon54.unx neumon54.hex neumnt54.hex \
             mon24.bin mon24.s19 mon53.s19 mon54.s19 monu54-6.s19 \
             coltab.asm coltab.hex coltab.org coltab.unx
pkgdata_DATA = neumon54.hex neumnt54.hex mon24.s19 mon53.s19 \
               mon54.s19 monu54-6.s19

all:

