pkgdata_DATA = \
	coltab.hex \
	mon24.s19 \
	mon24z.s19 \
	mon53.s19 \
	mon54.s19 \
	monu54-6.s19 \
	neumon54.hex

extra_files = \
	makefile_neumon54 \
	coltab.asm \
	coltab.lst \
	coltab.org \
	neumon54.asm \
	neumon54.lst \
	mon24.bin

EXTRA_DIST = ${pkgdata_DATA} ${extra_files}

SUBDIRS = mon24 mon24z

